# django-tutorials

./: README.md  noxfile.py  pyproject.toml  requirements.txt
official_tutorials/django-polls-app/: README.md  create_django_secret.py  noxfile.py  pyproject.toml
official_tutorials/django-polls-app/mysite/config/: .secrets.example.toml  settings.toml
official_tutorials/django-polls-app/mysite/mysite/: settings.py  urls.py
official_tutorials/django-polls-app/mysite/polls/: admin.py  models.py  tests.py  urls.py  views.py
official_tutorials/django-polls-app/mysite/polls/migrations/: 0001_initial.py
official_tutorials/django-polls-app/mysite/polls/templates/polls/: detail.html  index.html  results.html
official_tutorials/django-polls-app/mysite/templates/admin/: base_site.html  index.html.bak
official_tutorials/django-polls-app/requirements/: requirements.dev.txt  requirements.txt
